welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:26: error: not found: value T
    setCouleurBrosse(T(i))
                     ^Array1:31: error: not found: value T
  setCouleurBrosse(T(5))
                   ^